<package format="2">
	<name>moveit_task_constructor_visualization</name>
	<version>0.0.0</version>
	<description>Visualization tools for MoveIt Task Pipeline</description>

	<license>BSD</license>
	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
	<maintainer email="me@v4hn.de">Michael Goerner</maintainer>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>qtbase5-dev</build_depend>
	<depend>moveit_core</depend>
	<depend>moveit_task_constructor_msgs</depend>
	<depend>moveit_task_constructor_core</depend>
	<depend>moveit_ros_visualization</depend>
	<depend>rclcpp</depend>
	<depend>rviz2</depend>

	<test_depend>ros_testing</test_depend>
	<test_depend>moveit_resources_fanuc_moveit_config</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
		</export>
</package>
